<resources>
    <string name="app_name">DublinSound</string>
    <!-- MainActivity.java -->
    <string name="activity_infobull">This is a custom message box</string>
    <string name="activity_infotitle">About Decibel</string>
    <string name="activity_infobutton">Ok</string>
    <string name="activity_recStartErr">Unable to start recording</string>
    <string name="activity_recBusyErr">Recorder is busy or permission to record is prohibited</string>
    <string name="activity_recFileErr">Can not create file</string>
    <!-- activity_main.xml -->
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="activity_sound_label">RT Decibel</string>
    <string name="dublin_sensors">Map</string>
    <string name="track">Track</string>
    <string name="stop">Stop</string>
    <string name="title_activity_sound_heat_map">SoundHeatMap</string>


</resources>
