<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.hasanfakhra.noise_detector.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/dublinlocation"
            android:layout_gravity="right|top"
            android:layout_marginTop="32dp"
            android:text="@string/dublin_sensors"
            android:background="@android:color/white"
            android:layout_marginRight="16dp" />

        <ImageButton
            android:id="@+id/refreshbutton"
            android:layout_width="59dp"
            android:layout_height="49dp"
            android:layout_gravity="left|top"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:background="@android:color/transparent"
            android:src="@drawable/refresh" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_margin="15dp"
            android:text="@string/track" />


        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="15dp"
            android:text="@string/stop" />


    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <np.TextView
                android:id="@+id/lat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:textColor="@color/external_progress2" />

            <TextView
                android:id="@+id/latid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="36dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <np.TextView
                android:id="@+id/longa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:textColor="@color/external_progress2" />

            <TextView
                android:id="@+id/longid"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="36dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <np.TextView
                android:id="@+id/curlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_sound_label"
                android:textColor="@color/external_progress2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/decid"
                android:textSize="36dp"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/chartcontainer"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_marginBottom="20dp">
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp" />
    </RelativeLayout>

</LinearLayout>
